--- a/src/sass/_preview.scss
+++ b/src/sass/_preview.scss
@@ -1,5 +1,3 @@
-@use 'sass:color';
-@use 'base' as *;
 .preview {
   &__link {
     &:link,
@@ -86,7 +84,7 @@
   }
 
   &__user-generated {
-    background-color: color.adjust($color-grey-light-2, $lightness: -2%);
+    background-color: darken($color-grey-light-2, 2%);
 
     display: flex;
     align-items: center;
