--- a/src/sass/_recipe.scss
+++ b/src/sass/_recipe.scss
@@ -1,5 +1,3 @@
-@use 'sass:color';
-@use 'base' as *;
 .recipe {
   background-color: $color-grey-light-1;
 
@@ -102,7 +100,7 @@
   }
 
   &__user-generated {
-    background-color: color.adjust($color-grey-light-2, $lightness: -2%);
+    background-color: darken($color-grey-light-2, 2%);
 
     display: flex;
     align-items: center;
