--- a/src/sass/main.scss
+++ b/src/sass/main.scss
@@ -1,7 +1,7 @@
-@use 'base' as *;
-@use 'components' as *;
-@use 'header' as *;
-@use 'preview' as *;
-@use 'searchResults' as *;
-@use 'recipe' as *;
-
+@import 'base';
+@import 'components';
+@import 'header';
+@import 'preview';
+@import 'searchResults';
+@import 'recipe';
+@import 'upload';
